RESOLVED FIXED199696
Long pressing on attachments will crash the WebContent process
https://bugs.webkit.org/show_bug.cgi?id=199696
Summary Long pressing on attachments will crash the WebContent process
Tim Horton
Reported 2019-07-10 18:47:00 PDT
Long pressing on attachments will crash the WebContent process
Attachments
Patch (6.80 KB, patch)
2019-07-10 18:47 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-07-10 18:47:56 PDT
Tim Horton
Comment 2 2019-07-10 18:47:57 PDT
Dean Jackson
Comment 3 2019-07-10 18:56:17 PDT
Comment on attachment 373890 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373890&action=review > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:2667 > + linkIndicatorPositionInformation(page, attachment, request, info); Less than perfect name for a function (there are many like this in the file).
Tim Horton
Comment 4 2019-07-10 20:39:02 PDT
(In reply to Dean Jackson from comment #3) > Comment on attachment 373890 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=373890&action=review > > > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:2667 > > + linkIndicatorPositionInformation(page, attachment, request, info); > > Less than perfect name for a function (there are many like this in the file). Said introduced them recently, it all still needs baking but at least it’s not a giant function anymore.
WebKit Commit Bot
Comment 5 2019-07-10 21:09:58 PDT
Comment on attachment 373890 [details] Patch Clearing flags on attachment: 373890 Committed r247342: <https://trac.webkit.org/changeset/247342>
WebKit Commit Bot
Comment 6 2019-07-10 21:09:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.